argoCD/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qiita-cli-document
spec:
  selector:
    matchLabels:
      app: qiita-cli-document
  replicas: 2
  template:
    metadata:
      labels:
        app: qiita-cli-document
    spec:
      containers:
        - name: app
          image: registry.uniproject.jp/official/qiita-cli-document:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: default-port
          resources:
            limits:
              memory: "3Gi"
              cpu: "2000m"
            requests:
              memory: "1Gi"
              cpu: "1000m"
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 20
            httpGet:
              path: /
              port: default-port
              httpHeaders:
                - name: X-k8s-Header
                  value: readiness
      imagePullSecrets:
        - name: internal-harbor
