argoCD/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qiita-cli-document
spec:
  selector:
    app: qiita-cli-document
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
